# tiralabra

./: .pyproject.toml.swp  README.md  pyproject.toml
dokumentaatio/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  kaytto_ohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
kuvat/: index.html
src/: helppotesti.txt  index.py  index_datanesikasittely.py  index_datankasittelylla.py  index_helpoin.py  index_pitka_teksti.py  index_uusidata.py  index_uusin.py  index_uusmarkov.py  index_vaikea.py  kayttoliittyma.py  markovketju.py  pitkateksti.txt  pitkateksti2.txt  tekstinkasittelija.py  tekstinkasittelija_luokkana.py  tekstinkasittelijaluokkana.py  test.txt  testiteksti.txt  triepuu.py  triesolmu.py
src/kasiteltydata/: TL_data.txt_2  TL_data.txt_3  kivi_data.txt  kivi_data.txt_2  kurssi_data_2.txt  kurssi_data_3.txt  novellit_data.txt  novellit_data_2.txt  trump_data_2.txt  trump_data_3.txt
src/opetusdata/: Koko_TL_laki.txt  helppotesti.txt  kurssi.txt  novellit.txt  pitkateksti.txt  puhe.txt  puhe_monta.txt  seitseman_veljesta.txt
src/tests/: markovketju_test.py  tekstinkasittelija_luokkana_test.py  tekstinkasittelijaluokkana_test.py  testi.txt  testi2.txt  triepuu_test.py  triesolmu_test.py
