[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Eemil Arola <eemil.arola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.1"
autopep8 = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
